angular universal: solve localstorage issue, url updated

--- a/src/shared/components/product2/product2.component.html
+++ b/src/shared/components/product2/product2.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="detail-card-buttons border-top">
-        <a class="details border-right" routerLink="/details/{{product._id}}" target="_blank">Details</a>
+        <a class="details border-right" routerLink="/en/details/{{product._id}}" target="_blank">Details</a>
         <div class="cart" (click)="addToCart(product._id)">Add to cart</div>
     </div>
 </div>
