--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -52,12 +52,12 @@
             Menu
           </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu" (click)="toggleCollapse()">
-            <a *ngFor="let cat of subCategoryPage?.docs" ngbDropdownItem [routerLink]="'/category/'+cat.slug"
+            <a *ngFor="let cat of subCategoryPage?.docs" ngbDropdownItem [routerLink]="'/en/category/'+cat.slug"
               (click)="$event.preventDefault()"> {{cat.name}}</a>
           </div>
         </li>
         <li class="nav-item" *ngFor="let feature of features" (click)="toggleCollapse()">
-          <a class="nav-link" [routerLink]="'/features/'+feature.slug">{{feature.name}}</a>
+          <a class="nav-link" [routerLink]="'/en/features/'+feature.slug">{{feature.name}}</a>
         </li>
 
       </ul>
